[package]
name = "jsoncall"
version = "0.0.1"
edition = "2024"
authors = ["frozenlib <frozenlib@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/frozenlib/jsoncall"
documentation = "https://docs.rs/jsoncall/"
keywords = ["json-rpc", "async", "rpc", "jsonrpc", "ipc"]
categories = ["asynchronous", "network-programming"]
description = "A simple asynchronous JSON-RPC 2.0 library leveraging Rust's type system"
rust-version = "1.85.0"
include = [
    "src/**",
    "examples/**",
    "tests/**",
    "README.md",
    "README.*.md",
    "LICENSE*",
]


[dependencies]
parse-display = "0.10.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
derive-ex = "0.1.8"
tokio = { version = "1.44.0", "features" = [
    "sync",
    "rt",
    "rt-multi-thread",
    "io-util",
    "io-std",
    "macros",
    "process",
] }
ordered-float = "5.0.0"
thiserror = "2.0.12"
sigwake = "0.0.1"
tracing = "0.1.41"

[dev-dependencies]
assert-call = "0.1.2"
tokio = { version = "1.44.0", "features" = ["time"] }


[profile.dev]
panic = "abort"
