[package]
name = "jsoncall"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135", features = ["raw_value"] }
# base64 = "0.22.1"
futures = "0.3.31"
# url = "2.5.4"
derive-ex = "0.1.8"
tokio = { version = "1.43.0", "features" = ["sync", "rt", "io-util", "macros"] }
ordered-float = "4.6.0"
# slabmap = "0.2.1"
thiserror = "2.0.11"
parse-display = "0.10.0"

[dev-dependencies]
anyhow = "1.0.95"
